fixed rest task issues:removed embedded tomcat and replaced deployment with external tomcat,n+1 fixed, builders added.